--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Board Game Status</title>
+    <title>Board Game Statistics</title>
     <link href="../static/main.css" rel="stylesheet">
     <script type="text/javascript" src="https://cdn.pydata.org/bokeh/release/bokeh-1.3.4.min.js"></script>
         <script type="text/javascript">
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container" id="grad">
-        <h1>Board Game Status</h1>
+        <h1>Board Game Statistics</h1>
         <form action="/">
         <select name="feature_name">
             {% for feature in feature_names %}
